# project2md

./: .gitignore  README.md  debug_cli.py  debug_processor.py  pyproject.toml  setup.py
.github/workflows/: publish.yml
project2md/: cli.py  config.py  formatter.py  git.py  signature_processor.py
project2md/formatters/: factory.py
project2md/reposcribe/: cli.py  config.py  messages.py
reposcribe/: cli.py  config.py  formatter.py  git.py  stats.py  walker.py
scripts/: publish.sh
test_temp/: README.md  config.yml  empty_code.py  example.py  notes.txt  package.json  signatures_test.md  signatures_test_local.md
tests/: __init__.py  conftest.py  test_cli.py  test_cli_signatures.py  test_config.py  test_debug.py  test_formatter.py  test_formatters.py  test_git.py  test_signature_processor.py  test_signature_processor_improvements.py  test_stats.py  test_version.py  test_walker.py
